2005-10-26  Pierre Chifflier  <pollux@wzdftpd.net>

	* bugfix: permissions not sorted on keyword search (thanks to dindinx)

2005-10-24  Pierre Chifflier  <pollux@wzdftpd.net>

	* feature: added support for sections in new config format
	* feature: added option to test config file in executable

2005-10-23  Pierre Chifflier  <pollux@wzdftpd.net>

	* feature: enable unicode support by default

2005-10-20  Pierre Chifflier  <pollux@wzdftpd.net>

	* feature: add timestamps to log entries

2005-10-19  Pierre Chifflier  <pollux@wzdftpd.net>

	* feature: modules support in new config format

2005-10-17  Pierre Chifflier  <pollux@wzdftpd.net>

	* feature: pre_ip_check support in new config format

2005-10-11  Pierre Chifflier  <pollux@wzdftpd.net>

	* feature: use mysql_config to detect mysql headers and libs

2005-10-10  Pierre Chifflier  <pollux@wzdftpd.net>

	* feature: basic support of new config format, a few changes were
	needed in backend and tls sections

2005-09-26  Pierre Chifflier  <pollux@wzdftpd.net>

	* SECURITY: fix insecure use of popen() in wzd_mod.c

2005-09-23  Pierre Chifflier  <pollux@wzdftpd.net>

	* feature: keys on multiple lines in config_file_t

2005-09-20  Pierre Chifflier  <pollux@wzdftpd.net>

	* feature: starting to write developper docs

2005-09-18  Pierre Chifflier  <pollux@wzdftpd.net>

	* bugfix: fixed windows version of str_append_printf
	* feature: updated windows version

2005-09-12  Pierre Chifflier  <pollux@wzdftpd.net>

	* feature: support options in config_file_t
	* feature: load config_file_t from file or file descriptor
	* bugfix: events not logged (NEWDIR, DELDIR etc.)
	* bugfix: small doc update to validate xml parser
	* bugfix: readd command not working immediatly (problems in cache)

2005-08-27  Pierre Chifflier  <pollux@wzdftpd.net>

	* feature: support for strings and string lists in config_file_t

2005-08-24  Pierre Chifflier  <pollux@wzdftpd.net>

	* feature: some changes to have compatibility with intel c compiler